投稿データ取得関連APIのレスポンス修正、OpenAPI修正
